--- a/rolling/src/main/resources/application.properties
+++ b/rolling/src/main/resources/application.properties
@@ -1,15 +1,20 @@
 spring.application.name=rolling
 
-# 데이터베이스 설정
-spring.datasource.url=jdbc:mysql://localhost:3306/rolling_db?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
-spring.datasource.username=root
-spring.datasource.password=password
+# H2 데이터베이스 설정
+spring.datasource.url=jdbc:h2:mem:rolling_db;DB_CLOSE_DELAY=-1;
+spring.datasource.username=sa
+spring.datasource.password=
+# spring.datasource.driver-class-name=org.h2.Driver
+
+# H2 콘솔 활성화
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 # JPA 설정
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # 서버 포트
 server.port=8080
@@ -20,3 +25,6 @@ logging.level.com.rolling=DEBUG
 
 # 타임존 설정
 spring.jackson.time-zone=Asia/Seoul
+
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
