--- a/rolling/src/main/resources/application.properties
+++ b/rolling/src/main/resources/application.properties
@@ -14,6 +14,8 @@ spring.h2.console.path=/h2-console
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.naming.physical-strategy=com.rolling.config.jpa.SnakeCasePhysicalNamingStrategy
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
 # spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # 서버 포트
