chore: .gitignore 대상 추가

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 
+.vscode/launch.json
+rolling/src/main/java/com/rolling/rolling-backend.code-workspace
+rolling/src/main/java/com/rolling/rolling-backend.code-workspace
