--- a/rolling/src/main/resources/application.properties
+++ b/rolling/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=rolling
 
 # H2 데이터베이스 설정
-spring.datasource.url=jdbc:h2:mem:rolling_db;DB_CLOSE_DELAY=-1;
+spring.datasource.url=jdbc:h2:file:./data/rolling_db;DB_CLOSE_ON_EXIT=TRUE;AUTO_SERVER=TRUE
 spring.datasource.username=sa
 spring.datasource.password=
 # spring.datasource.driver-class-name=org.h2.Driver
@@ -11,7 +11,7 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 # JPA 설정
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy=com.rolling.config.jpa.SnakeCasePhysicalNamingStrategy
@@ -30,3 +30,6 @@ spring.jackson.time-zone=Asia/Seoul
 
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
+
+spring.devtools.restart.enabled=true
+spring.devtools.livereload.enabled=true
