chore: .gitignore에 데이터베이스 관련 파일 추가 - rolling_db.lock.db, rolling_db.mv.db, rolling_db.trace.db 파일을 .gitignore에 추가하여 버전 관리에서 제외

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 .vscode/launch.json
 rolling/src/main/java/com/rolling/rolling-backend.code-workspace
 rolling/src/main/java/com/rolling/rolling-backend.code-workspace
+data/rolling_db.lock.db
+data/rolling_db.mv.db
+data/rolling_db.trace.db
+rolling/data/rolling_db.mv.db
+rolling/data/rolling_db.trace.db
