--- a/rolling/src/main/resources/application.properties
+++ b/rolling/src/main/resources/application.properties
@@ -11,25 +11,35 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 # JPA 설정
-spring.jpa.hibernate.ddl-auto=create
+# TODO: 배포 환경에서  변경필요
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy=com.rolling.config.jpa.SnakeCasePhysicalNamingStrategy
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
 # spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+
+
 # 서버 포트
 server.port=8080
 
 # 로깅 레벨
-logging.level.org.springframework=INFO
 logging.level.com.rolling=DEBUG
+logging.level.org.springframework=INFO
+logging.level.org.springframework.beans=DEBUG
+logging.level.org.hibernate=DEBUG
 
 # 타임존 설정
 spring.jackson.time-zone=Asia/Seoul
 
-spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 
+
+# 개발 환경 설정
 spring.devtools.restart.enabled=true
 spring.devtools.livereload.enabled=true
+
+# URL 패턴 매칭 설정
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+spring.mvc.pathmatch.use-trailing-slash-match=true
