--- a/rolling/src/main/resources/application.properties
+++ b/rolling/src/main/resources/application.properties
@@ -19,8 +19,6 @@ spring.jpa.hibernate.naming.physical-strategy=com.rolling.config.jpa.SnakeCasePh
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
 # spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-
-
 # 서버 포트
 server.port=8080
 
@@ -33,8 +31,7 @@ logging.level.org.hibernate=DEBUG
 # 타임존 설정
 spring.jackson.time-zone=Asia/Seoul
 
-spring.web.resources.add-mappings=false
-
+spring.web.resources.add-mappings=true
 
 # 개발 환경 설정
 spring.devtools.restart.enabled=true
@@ -43,3 +40,22 @@ spring.devtools.livereload.enabled=true
 # URL 패턴 매칭 설정
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 spring.mvc.pathmatch.use-trailing-slash-match=true
+
+# Swagger OpenAPI 설정
+springdoc.api-docs.path=/v3/api-docs
+springdoc.api-docs.version=OPENAPI_3_0
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.display-request-duration=true
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.filter=true
+
+# Swagger 패키지 스캔 및 경로 설정
+springdoc.packagesToScan=com.rolling.controller
+springdoc.pathsToMatch=/**
+springdoc.swagger-ui.tags-sorter=alpha
+
+# API 서버 URL 설정
+rolling.openapi.dev-url=http://localhost:8080
+rolling.openapi.prod-url=https://api.rolling.com
