--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'com.h2database:h2:2.2.224'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'me.paulschwarz:spring-dotenv:4.0.0'
+	
+	// MariaDB Driver
+	implementation 'org.mariadb.jdbc:mariadb-java-client:3.3.2'
 	
 	// Swagger OpenAPI 3.0
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
