--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,20 @@
 spring.application.name=rolling
 
+# MariaDB 데이터베이스 설정
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
 # H2 데이터베이스 설정
-spring.datasource.url=jdbc:h2:file:./data/rolling_db;DB_CLOSE_ON_EXIT=TRUE;AUTO_SERVER=TRUE
-spring.datasource.username=sa
-spring.datasource.password=
+# spring.datasource.url=jdbc:h2:file:./data/rolling_db;DB_CLOSE_ON_EXIT=TRUE;AUTO_SERVER=TRUE
+# spring.datasource.username=sa
+# spring.datasource.password=
 # spring.datasource.driver-class-name=org.h2.Driver
 
 # H2 콘솔 활성화
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# spring.h2.console.enabled=true
+# spring.h2.console.path=/h2-console
 
 # JPA 설정
 # TODO: 배포 환경에서  변경필요
@@ -17,7 +23,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy=com.rolling.config.jpa.SnakeCasePhysicalNamingStrategy
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
-# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 
 # 서버 포트
 server.port=8080
@@ -59,3 +65,10 @@ springdoc.swagger-ui.tags-sorter=alpha
 # API 서버 URL 설정
 rolling.openapi.dev-url=http://localhost:8080
 rolling.openapi.prod-url=https://api.rolling.com
+
+# 추가적인 MySQL 최적화 설정
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.connection-timeout=30000
+spring.jpa.properties.hibernate.dialect.storage_engine=innodb
