feat: 서비스 에러 처리 및 예외 핸들러 추가 - GlobalExceptionHandler에 ServiceError 예외 핸들러 추가 - ServiceError 클래스 및 ServiceErrorCode 열거형 추가하여 에러 코드 및 메시지 관리 - 서비스 구현체에 ServiceError 적용

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,9 +29,9 @@ spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 server.port=8080
 
 # 로깅 레벨
-logging.level.com.rolling=DEBUG
-logging.level.org.springframework=INFO
-logging.level.org.springframework.beans=DEBUG
+logging.level.com.rolling=ERROR
+logging.level.org.springframework=ERROR
+logging.level.org.springframework.beans=ERROR
 logging.level.org.hibernate=DEBUG
 
 # 타임존 설정
