--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,12 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
+# SQL 초기화 스크립트 실행 설정
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.data-locations=classpath:data.sql
+spring.sql.init.continue-on-error=true
+
 # H2 데이터베이스 설정
 # spring.datasource.url=jdbc:h2:file:./data/rolling_db;DB_CLOSE_ON_EXIT=TRUE;AUTO_SERVER=TRUE
 # spring.datasource.username=sa
@@ -16,14 +22,15 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 # spring.h2.console.enabled=true
 # spring.h2.console.path=/h2-console
 
-# JPA 설정
-# TODO: 배포 환경에서  변경필요
-spring.jpa.hibernate.ddl-auto=update
+# JPA 설정 - 스키마 관리
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy=com.rolling.config.jpa.SnakeCasePhysicalNamingStrategy
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+
+# 초기화 데이터 관련 설정 - 제거 (spring.sql.init으로 대체)
 
 # 서버 포트
 server.port=8080
