--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.sql.init.continue-on-error=true
 # spring.h2.console.path=/h2-console
 
 # JPA 설정 - 스키마 관리
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy=com.rolling.config.jpa.SnakeCasePhysicalNamingStrategy
