--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,23 +12,14 @@ spring.jpa.defer-datasource-initialization=true
 spring.sql.init.data-locations=classpath:data.sql
 spring.sql.init.continue-on-error=true
 
-# H2 데이터베이스 설정
-# spring.datasource.url=jdbc:h2:file:./data/rolling_db;DB_CLOSE_ON_EXIT=TRUE;AUTO_SERVER=TRUE
-# spring.datasource.username=sa
-# spring.datasource.password=
-# spring.datasource.driver-class-name=org.h2.Driver
-
-# H2 콘솔 활성화
-# spring.h2.console.enabled=true
-# spring.h2.console.path=/h2-console
-
 # JPA 설정 - 스키마 관리
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
+# spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy=com.rolling.config.jpa.SnakeCasePhysicalNamingStrategy
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+spring.jpa.properties.hibernate.generate_statistics=true 
 
 # 초기화 데이터 관련 설정 - 제거 (spring.sql.init으로 대체)
 
@@ -39,7 +30,7 @@ server.port=8080
 logging.level.com.rolling=ERROR
 logging.level.org.springframework=ERROR
 logging.level.org.springframework.beans=ERROR
-logging.level.org.hibernate=DEBUG
+logging.level.org.hibernate=ERROR
 
 # 타임존 설정
 spring.jackson.time-zone=Asia/Seoul
@@ -71,7 +62,6 @@ springdoc.swagger-ui.tags-sorter=alpha
 
 # API 서버 URL 설정
 rolling.openapi.dev-url=http://localhost:8080
-rolling.openapi.prod-url=https://api.rolling.com
 
 # 추가적인 MySQL 최적화 설정
 spring.datasource.hikari.maximum-pool-size=10
