chore: .gitignore 파일 업데이트 - 새로운 파일 및 디렉토리를 무시 목록에 추가하여 빌드 및 배포 과정에서 불필요한 파일이 포함되지 않도록 설정

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,12 @@ src/main/java/com/rolling/TBD/
 
 ### MariaDB ###
 .env
+src/main/resources/keystore.p12
+docker-compose.yml
+Dockerfile
+generate-ssl.sh
+init-letsencrypt.sh
+Jenkinsfile
+.github/workflows/ci-cd.yml
+nginx/conf/default.conf
+scripts/deploy.sh
