feat: Prometheus 모니터링 시스템 추가
- build.gradle에 Hibernate Micrometer 및 Prometheus 레지스트리 의존성 추가
- application.properties에 Prometheus 엔드포인트 활성화 설정 추가
- MetricsConfig.java 추가로 Hibernate 통계 자동 활성화 구성
- MonitoringController.java 대폭 개선:
  * 애플리케이션 시작 시 통계 기능 자동 활성화
  * SQL 쿼리 분석 및 작업 유형별 분류 기능 추가
  * 엔티티별 상세 통계 및 N+1 쿼리 패턴 감지 개선
  * Collection 로딩 통계 추가 및 디버깅 로그 강화
- prometheus.yml 설정 파일 추가로 Spring Actuator 메트릭 수집 구성

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
+
+
 # SQL 초기화 스크립트 실행 설정
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
@@ -69,3 +71,8 @@ spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.connection-timeout=30000
 spring.jpa.properties.hibernate.dialect.storage_engine=innodb
+
+management.endpoints.web.exposure.include=health,info,prometheus
+management.endpoint.prometheus.enabled=true
+management.prometheus.metrics.export.enabled=true 
+management.metrics.export.prometheus.enabled=true 
