--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,7 @@ dependencies {
 	
 	// MariaDB Driver
 	implementation 'org.mariadb.jdbc:mariadb-java-client:3.3.2'
-	
+
 	// Swagger OpenAPI 3.0
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 	implementation 'org.springdoc:springdoc-openapi-starter-common:2.3.0'
@@ -58,8 +58,12 @@ dependencies {
 
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
+	// Hibernate Micrometer
+	implementation 'org.hibernate.orm:hibernate-micrometer:6.4.4.Final'
 	// P6Spy
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
+
+	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 
 }
 
