feat: BLOB 서비스를 위한 의존성 및 설정 추가
- Spring Security, OAuth2 Client, JWT 의존성 추가
- BLOB OAuth2 설정 추가 (카카오, 네이버, 구글)
- BLOB JWT 토큰 설정 및 파일 업로드 설정 추가
- Swagger 패키지 스캔에 com.blob.controller 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -58,7 +58,7 @@ springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.filter=true
 
 # Swagger 패키지 스캔 및 경로 설정
-springdoc.packagesToScan=com.rolling.controller
+springdoc.packagesToScan=com.rolling.controller,com.blob.controller
 springdoc.pathsToMatch=/**
 springdoc.swagger-ui.tags-sorter=alpha
 
@@ -76,3 +76,26 @@ management.endpoints.web.exposure.include=health,info,prometheus
 management.endpoint.prometheus.enabled=true
 management.prometheus.metrics.export.enabled=true 
 management.metrics.export.prometheus.enabled=true 
+
+# BLOB 서비스 설정
+blob.jwt.secret=${BLOB_JWT_SECRET:blob-default-secret-key-for-development}
+blob.jwt.expiration=86400000
+blob.jwt.refresh-expiration=604800000
+
+# BLOB OAuth2 설정
+blob.oauth.kakao.client-id=${BLOB_KAKAO_CLIENT_ID:}
+blob.oauth.kakao.client-secret=${BLOB_KAKAO_CLIENT_SECRET:}
+blob.oauth.kakao.redirect-uri=${BLOB_KAKAO_REDIRECT_URI:http://localhost:8080/api/blob/auth/kakao/callback}
+
+blob.oauth.naver.client-id=${BLOB_NAVER_CLIENT_ID:}
+blob.oauth.naver.client-secret=${BLOB_NAVER_CLIENT_SECRET:}
+blob.oauth.naver.redirect-uri=${BLOB_NAVER_REDIRECT_URI:http://localhost:8080/api/blob/auth/naver/callback}
+
+blob.oauth.google.client-id=${BLOB_GOOGLE_CLIENT_ID:}
+blob.oauth.google.client-secret=${BLOB_GOOGLE_CLIENT_SECRET:}
+blob.oauth.google.redirect-uri=${BLOB_GOOGLE_REDIRECT_URI:http://localhost:8080/api/blob/auth/google/callback}
+
+# BLOB 파일 업로드 설정
+blob.file.upload.path=${BLOB_FILE_UPLOAD_PATH:./uploads/blob}
+blob.file.max-size=10MB
+blob.file.allowed-types=image/jpeg,image/png,image/gif,image/webp
