--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,16 @@ dependencies {
 	// Swagger OpenAPI 3.0
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 	implementation 'org.springdoc:springdoc-openapi-starter-common:2.3.0'
+	
+	// BLOB 서비스를 위한 Spring Security & JWT
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'
+	
+	// Validation
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
  
 
 	compileOnly 'org.projectlombok:lombok'
