--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.sql.init.continue-on-error=true
 spring.jpa.hibernate.ddl-auto=create-drop
 # spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.naming.physical-strategy=com.rolling.config.jpa.SnakeCasePhysicalNamingStrategy
+spring.jpa.hibernate.naming.physical-strategy=com.common.config.SnakeCasePhysicalNamingStrategy
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 spring.jpa.properties.hibernate.generate_statistics=true 
