feat: Spring Boot DevTools 자동 재시작 및 개발 환경 설정 개선
- application.properties: 애플리케이션명 duke-backend로 변경
- JPA ddl-auto를 create-drop에서 update로 변경하여 데이터 보존
- .gitignore: 개발 도구 관련 파일들 제외 추가 (Claude, Cursor, docs 등)

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,13 @@ Jenkinsfile
 .github/workflows/ci-cd.yml
 nginx/conf/default.conf
 scripts/deploy.sh
+
+.cursor/rules/readme-for-resume.mdc
+.cursor/rules/toss-frontend-rule.mdc
+CLAUDE.md
+docker-compose-dev.yml
+docs/folder-tree.md
+docs/folder-tree.md.bak
+docs/SPRING_SERVER_DESIGN.md
+src/main/java/com/rolling/duke-backend.code-workspace
+src/main/java/com/rolling/rolling-backend.code-workspace
