--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=rolling
+spring.application.name=duke-bakcend
 
 # MariaDB 데이터베이스 설정
 spring.datasource.url=${DB_URL}
@@ -15,7 +15,7 @@ spring.sql.init.data-locations=classpath:data.sql
 spring.sql.init.continue-on-error=true
 
 # JPA 설정 - 스키마 관리
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 # spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy=com.common.config.SnakeCasePhysicalNamingStrategy
