--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.sql.init.data-locations=classpath:data.sql
 spring.sql.init.continue-on-error=true
 
 # JPA 설정 - 스키마 관리
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 # spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy=com.common.config.SnakeCasePhysicalNamingStrategy
@@ -33,6 +33,13 @@ logging.level.com.rolling=ERROR
 logging.level.org.springframework=ERROR
 logging.level.org.springframework.beans=ERROR
 logging.level.org.hibernate=ERROR
+
+logging.pattern.console=%green(%d{yyyy-MM-dd HH:mm:ss.SSS}) %magenta([%thread]) %highlight(%-5level) %cyan(%logger) - %yellow(%msg%n)
+# logging.pattern.console="[%clr(%X{request_id:-startup}){cyan}] %d{yyyy-MM-dd HH:mm:ss.SSS} %clr(%5p){FATAL=red, ERROR=red, WARN=yellow, INFO=green, DEBUG=blue, TRACE=magenta} [%t] %clr(%-40.40logger{39}){cyan} [%4L] : %m%n"
+
+
+spring.output.ansi.enabled=always
+
 
 # 타임존 설정
 spring.jackson.time-zone=Asia/Seoul
